# Tesla_core_public

./: CHANGELOG.md  README.md  run-clang-format.py
Tesla_core/mag_control/mag_manip/test/: CMakeLists.txt  C_Mag_Calibration_06-25-2015.yaml  emns_params_valid.yaml  (+30 more)
Tesla_core/mag_control/mag_tensorflow/: .gitignore  CMakeLists.txt  package.xml
Tesla_core/mag_control/mpem/: CMakeLists.txt  find_numpy_include_dir.py  package.xml  setup.py
Tesla_core/tsc_msgs/ecb_msgs/: CMakeLists.txt  package.xml
Tesla_core/tsc_utils/: GetGitRevisionDescription.cmake  package.xml
Tesla_core/tsc_utils/cmake/: create_swig_python_module.cmake  mac_include_numpy.cmake
Tesla_core/tsc_utils/doc/: index.rst
Tesla_core/tsc_utils/input_lists/: .~lock.cmag_current_list.csv#  cmag_current_-5A_5A_single_coil.csv  cmag_current_list.csv  currents_-4A_0A_allcoils.csv  currents_0_1A_allcoils.csv  currents_0_1A_coil0.csv
Tesla_core/tsc_utils/nosetests/: test.bag  test_conversions.py  test_geometry.py  test_mag_utils.py  test_rosbag_extract.py
Tesla_core/tsc_utils/scripts/: broadcast_transform_node.py  fields_list_node.py  print_packages_and_maintainers.py  set_param_from_transform_node.py  test_field_array_pub_node.py  update_version_number.py
Tesla_core/tsc_utils/test/: test_eigen_matrix_compare.cpp
mag_control/mag_calculator/: CMakeLists.txt  package.xml
mag_control/mag_calculator/cfg/: ForwardModel.cfg
mag_control/mag_calculator/launch/: backward_MFG.launch  backwards_maghead_full.launch  forward_backward_magbed.launch
mag_control/mag_calculator/rviz/: demo_mag_magbed.rviz
mag_control/mag_calculator/scripts/: ComputeMaxField.py  currents_list_node.py
mag_control/mag_calculator/src/: forward_model.cpp
mag_control/mag_calculator/srv/: get_magnetic_field.srv
mag_control/mag_manip/: CMakeLists.txt  package.xml
mag_control/mag_manip/bench/: CMakeLists.txt  bench_backward_model_mpem_L2.cpp  bench_backward_model_nls.cpp  bench_forward_model_tensorflow.cpp
mag_control/mag_manip/examples/: example_mag_manip.py  example_saturation.py
mag_control/mag_manip/nosetests/: test_mag_manip.py  test_several_positions.py
mag_control/mag_manip/params/: Navion_2.yaml
mag_control/mag_manip/python/: mag_manip.i
mag_control/mag_manip/scripts/: convert_aeon_vfield.py  coverage.sh  generate_rbf_from_mpem.py
mag_control/mag_manip/src/: backward_model.cpp  backward_model_factory.cpp  backward_model_linear_vfield_L2.cpp  emns_parameters_yaml.cpp  forward_model.cpp  forward_model_factory.cpp  forward_model_linear_currents_jacobian_functor.cpp  forward_model_linear_factory.cpp  forward_model_linear_rbf.cpp  forward_model_saturation.cpp  forward_model_tensorflow.cpp  helpers.cpp  interpolate_regular.cpp  interpolate_tricubic.cpp  interpolate_tricubic_scalar_field.cpp  saturation_function_factory.cpp  vfield.cpp
mag_control/mag_manip/test/: emns_parameters_mock.h  invalid.yaml  invalid_no_coeffs.yaml  rbf_cubic_octomag.yaml  rbf_gaussian_octomag.yaml  rbf_imq_octomag.yaml  saturation_8tanh.yaml  test_backward_model_factory.cpp  test_backward_model_linear_L2_saturation.cpp  test_backward_model_linear_rbf_L2.cpp  test_backward_model_linear_thinplatespline_L2.cpp  test_backward_model_linear_vfield_L2.cpp  test_backward_model_nls.cpp  test_dipole_interactions.cpp  test_emns.cpp  test_emns_parameters_conversions.launch  test_emns_parameters_rosparam.launch  test_emns_parameters_yaml.cpp  test_forward_model_linear_saturation.cpp  test_forward_model_linear_thinplatespline.cpp  test_forward_model_linear_vfield.cpp  test_forward_model_mpem.cpp  test_interpolate_tricubic.cpp  test_interpolate_tricubic_scalar_field.cpp  test_saturation.cpp  test_saturation_atan.cpp  test_saturation_erf.cpp  test_saturation_rational.cpp  test_saturation_tanh.cpp  trilpl_Ng16_0_interp_ev.txt  vfield_01.txt  vfield_02.txt  vfield_03.txt  vfield_06.txt  vfield_single.yaml
mag_control/mag_rviz/: CMakeLists.txt  README.md  package.xml
mag_control/mag_rviz/rviz/: demo_panels_and_displays.rviz
mag_control/mag_tensorflow/: README.md  package.xml
mag_control/mag_tensorflow/scripts/: benchmark_model.py
mag_control/mag_tensorflow/src/: hello-world.c  model.cpp
mag_control/mag_tensorflow/test/: args.txt  currents.txt  test_model.cpp
mag_control/mpem/: MagneticSystem.m  README.md  package.xml
mag_control/mpem/MATLAB/: MultiPoleObject.m
mag_control/mpem/cal/: Navion_1_1_Calibration.yaml  Navion_1_2_Calibration.yaml  OctoMag_Calibration.yaml
mag_control/mpem/cal_ic_files/: Navion_IC.yaml  OctoMag_IC.yaml
mag_control/mpem/nosetests/: test_mpem.py
mag_control/mpem/python/: CMakeLists.txt
mag_control/mpem/src/: electromagnet_calibration.cpp  scalorPotential.cpp
tsc_msgs/mag_msgs/: CMakeLists.txt  package.xml
tsc_msgs/mag_msgs/msg/: DipoleGradientStamped.msg  FieldGradient5Stamped.msg  FieldStamped.msg
tsc_msgs/mag_rod_msgs/: CMakeLists.txt  package.xml
tsc_msgs/mag_rod_msgs/msg/: LengthStamped.msg  VSCommand.msg  VSState.msg
tsc_utils/: CMakeLists.txt  README.md  package.xml  setup.py
tsc_utils/cmake/: find_numpy_include_dir.py  find_rviz_qt.cmake
tsc_utils/doc/: conf.py
tsc_utils/include/tsc_utils/: eigen_tensor_compare.h
tsc_utils/input_lists/: currents_-1A_1A.txt  currents_0_1A_coil0.txt  currents_8_-5A_5A_single_coil.txt  currents_8_5A_single_coil.txt
tsc_utils/input_lists/aligned_gradient/: currents_list.csv
tsc_utils/input_lists/ramps_zero_current/: currents_0_-1A_1A.txt  currents_1_-1A_1A.txt  currents_3_-1A_1A.txt  currents_4_-1A_1A.txt  currents_7_-1A_1A.txt
tsc_utils/nosetests/: generate_bags.py  test.txt  test_conversions.py  test_coordinates.py  test_geometry.py  test_mag_utils.py  test_rotations.py
tsc_utils/python/tsc_utils/: conversions.py  coordinates.py  geometry.py  mag_utils.py  rosbag_extract.py  rotations.py  rviz_utils.py
tsc_utils/scripts/: currents_list_node.py  generate_docs.py  get_python_package_info.py  poses_custom_grid_node.py  publish_rviz_mesh_marker_node.py  rosbag_processor.py  update_license_tags.py
tsc_utils/test/: test_eigen_tensor_compare.cpp
(+255 files in other folders)
