<?xml version="1.0"?>
<package format="3">
    <name>tsc_utils</name>
    <version>4.0.0</version>
    <description>Utilities and helpers to be used with Tesla_core</description>

    <maintainer email="fheemeyer@ethz.ch">Florian Heemeyer</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

    <depend>eigen</depend>
    <depend>roslib</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>mag_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>ffmpeg</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-future</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pandas</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pandas</exec_depend>
</package>
