<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
    Tesla - A ROS-based framework for performing magnetic manipulation
    Copyright 2018 Multi Scale Robotics Lab
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<package format="3">
  <name>mag_calculator</name>
  <version>4.0.1</version>
  <description>ROS nodes for performing magnetic calculations between currents and fields</description>
  
  <maintainer email="fheemeyer@ethz.ch">Florian Heemeyer</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>eigen</depend>
  <depend>ecb_msgs</depend>
  <depend>mag_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mag_manip</depend>
  <depend>tsc_utils</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>dynamic_reconfigure</depend>
    
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
