<?xml version="1.0"?>
<package>
  <name>mag_rviz</name>
  <version>4.0.0</version>
  <description>Magnetic control vizualization plugins for rviz</description>

  <maintainer email="fheemeyer@ethz.ch">Florian Heemeyer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mag_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
