<?xml version="1.0"?>
<package format="2">
  <name>mag_tensorflow</name>
  <version>4.0.1</version>
  <description>Provides a tensorflow interface for models</description>

  <maintainer email="fheemeyer@ethz.ch">Florian Heemeyer</maintainer>
  <author email="samuel.charreyron@gmail.com">Samuel Charreyron</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roslib</depend>
</package>
