<?xml version="1.0"?>
<package format="2">
  <name>mpem</name>
  <version>4.0.1</version>
  <description>Magnetic manipulation model based on linear combinations of multipole electromagnets</description>

  <maintainer email="fheemeyer@ethz.ch">Florian Heemeyer</maintainer>
  <author email="apetruska@mines.edu">Andrew Petruska</author>
  <author email="janis.edelmann@gmail.com">Janis Edelmann</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>swig</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
  <depend>tsc_utils</depend>
</package>
