<?xml version="1.0"?>
<package format="2">
  <name>mag_rod_msgs</name>
  <version>4.0.1</version>
  <description>ROS messages for magnetic catheters</description>
  
  <maintainer email="fheemeyer@ethz.ch">Florian Heemeyer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
</package>
